<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="100dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:id="@+id/txtheadename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:hint="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/txtFirstName"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:hint="@string/txtFirstName"
            android:inputType="text|textPersonName" />

        <EditText
            android:id="@+id/txtLastName"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:hint="@string/txtLastName"
            android:inputType="text|textPersonName" />

        <EditText
            android:id="@+id/txtPhoneNumber"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:hint="@string/txtPhoneNumber"
            android:inputType="text|textPersonName" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:onClick="saveToPhoneBook"
            android:hint="@string/btnSave"/>
    </LinearLayout>
</ScrollView>